構造整理(TJSBase に variant部を集約)
git-svn-id: https://sv.kikyou.info/svn/kirikiri2/trunk@4798 9e463c26-7fdd-0310-8662-bb9cb7c2284e

--- a/kirikiri2/src/plugins/win32/javascript/javascript.vcproj
+++ b/kirikiri2/src/plugins/win32/javascript/javascript.vcproj
@@ -191,6 +191,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\tjsbase.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\tjsobj.cpp"
 				>
 			</File>
