・ラッパー部のコードを整理。関数呼び出しも正常動作 ・DeleteMember を追加実装 ・プロトタイプクラス用機能を実装（動作未確認）
git-svn-id: https://sv.kikyou.info/svn/kirikiri2/trunk@4799 9e463c26-7fdd-0310-8662-bb9cb7c2284e

--- a/kirikiri2/src/plugins/win32/javascript/javascript.vcproj
+++ b/kirikiri2/src/plugins/win32/javascript/javascript.vcproj
@@ -195,6 +195,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\tjsinstance.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\tjsobj.cpp"
 				>
 			</File>
@@ -226,6 +230,10 @@
 			</File>
 			<File
 				RelativePath=".\tjsbase.h"
+				>
+			</File>
+			<File
+				RelativePath=".\tjsinstance.h"
 				>
 			</File>
 			<File
