--- a/kirikiri2/src/plugins/win32/javascript/javascript.vcproj
+++ b/kirikiri2/src/plugins/win32/javascript/javascript.vcproj
@@ -139,7 +139,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="v8.lib"
+				AdditionalDependencies="v8.lib winmm.lib Ws2_32.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="v8"
 				GenerateDebugInformation="true"
