--- a/kirikiri2/src/plugins/win32/layerExDraw/VC9/LayerExDraw.vcproj
+++ b/kirikiri2/src/plugins/win32/layerExDraw/VC9/LayerExDraw.vcproj
@@ -188,6 +188,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\Path.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\tp_stub.cpp"
 				>
 			</File>
