最新同期 ・ファイル名かぶり回避用にファイル名変更 (sqobjectclass) ・環境によるコンパイルエラー対策各種 ・StackValue を Objectクラス側に移動 ・例外系拡張/整理 ・プロパティ処理でグローバルを参照にいくのはおかしいので修正 ・delegate指定は弱参照で保持する ・各種型判定を弱参照に対応 ・instanceof 仕様変更。インスタンスでない場合は単にエラーを返す ・解放時のタイミング問題回避のため静的変数は廃止
git-svn-id: https://sv.kikyou.info/svn/kirikiri2/trunk@4995 9e463c26-7fdd-0310-8662-bb9cb7c2284e

--- a/kirikiri2/src/plugins/win32/squirrel/squirrel/sq/sq.vcproj
+++ b/kirikiri2/src/plugins/win32/squirrel/squirrel/sq/sq.vcproj
@@ -6,7 +6,6 @@
 	ProjectGUID="{121C01F7-EDA6-40EA-BA70-48CCFBD1A449}"
 	RootNamespace="sq"
 	Keyword="Win32Proj"
-	TargetFrameworkVersion="196613"
 	>
 	<Platforms>
 		<Platform
@@ -42,7 +41,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="..;..\include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;NOUSESQRAT"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -86,6 +85,9 @@
 				Name="VCAppVerifierTool"
 			/>
 			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
@@ -116,7 +118,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				AdditionalIncludeDirectories="..;..\include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;NOUSESQRAT"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -157,6 +159,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
