--- a/kirikiri2/src/plugins/win32/squirrel/squirrel/squirrel.vcproj
+++ b/kirikiri2/src/plugins/win32/squirrel/squirrel/squirrel.vcproj
@@ -41,7 +41,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="include;sqplus"
-				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_NON_CONFORMING_SWPRINTFS;_CRT_SECURE_NO_WARNINGS"
+				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_NON_CONFORMING_SWPRINTFS;_CRT_SECURE_NO_WARNINGS;NOUSESQRAT"
 				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -103,7 +103,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="include;sqplus"
-				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_NON_CONFORMING_SWPRINTFS;_CRT_SECURE_NO_WARNINGS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_NON_CONFORMING_SWPRINTFS;_CRT_SECURE_NO_WARNINGS;NOUSESQRAT"
 				RuntimeLibrary="0"
 				WarningLevel="3"
 				DebugInformationFormat="3"
@@ -253,7 +253,7 @@
 					>
 				</File>
 				<File
-					RelativePath=".\sqobject\sqobject.cpp"
+					RelativePath=".\sqobject\sqobjectclass.cpp"
 					>
 					<FileConfiguration
 						Name="Debug|Win32"
@@ -326,11 +326,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\sqobject\sqobject.h"
+				RelativePath=".\squirrel\sqobject.h"
 				>
 			</File>
 			<File
-				RelativePath=".\squirrel\sqobject.h"
+				RelativePath=".\sqobject\sqobjectclass.h"
 				>
 			</File>
 			<File
