--- a/kirikiri2/src/plugins/win32/javascript/javascript.vcxproj
+++ b/kirikiri2/src/plugins/win32/javascript/javascript.vcxproj
@@ -47,7 +47,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..;v8</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..;c:\node\deps\v8</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;JAVASCRIPT_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -59,16 +59,16 @@
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>v8_base.lib;v8_libbase.lib;v8_libplatform.lib;v8_nosnapshot.lib;icuuc.lib;icui18n.lib;winmm.lib;advapi32.lib</AdditionalDependencies>
+      <AdditionalDependencies>v8_base.ia32.lib;v8_nosnapshot.ia32.lib;winmm.lib;advapi32.lib;Ws2_32.lib</AdditionalDependencies>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
-      <AdditionalLibraryDirectories>v8\build\Debug\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\node\build\Debug\lib</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..;v8</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..;c:\node\deps\v8</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;JAVASCRIPT_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <TreatWChar_tAsBuiltInType>false</TreatWChar_tAsBuiltInType>
@@ -78,8 +78,8 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>v8_base.lib;v8_libbase.lib;v8_libplatform.lib;v8_nosnapshot.lib;icuuc.lib;icui18n.lib;winmm.lib;advapi32.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>v8\build\Release\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>v8_base.ia32.lib;v8_nosnapshot.ia32.lib;winmm.lib;advapi32.lib;Ws2_32.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\node\build\Release\lib</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
