--- a/kirikiri2/src/plugins/win32/javascript/javascript.vcxproj.filters
+++ b/kirikiri2/src/plugins/win32/javascript/javascript.vcxproj.filters
@@ -13,12 +13,15 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
     </Filter>
+    <Filter Include="ソース ファイル\ncbind">
+      <UniqueIdentifier>{0ad6e19e-c012-42b1-b4f6-3a5aa0e3ebac}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\ncbind">
+      <UniqueIdentifier>{0b65487b-6ebb-4e56-991c-648d25796d76}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ncbind\ncbind.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="tjsbase.cpp">
@@ -30,23 +33,17 @@
     <ClCompile Include="tjsobj.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="..\tp_stub.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="wrapper.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="..\ncbind\ncbind.cpp">
+      <Filter>ソース ファイル\ncbind</Filter>
+    </ClCompile>
+    <ClCompile Include="..\tp_stub.cpp">
+      <Filter>ソース ファイル\ncbind</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\ncbind\ncb_foreach.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="..\ncbind\ncb_invoke.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="..\ncbind\ncbind.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="tjsbase.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
@@ -56,8 +53,17 @@
     <ClInclude Include="tjsobj.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="..\ncbind\ncb_foreach.h">
+      <Filter>ヘッダー ファイル\ncbind</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ncbind\ncbind.hpp">
+      <Filter>ヘッダー ファイル\ncbind</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ncbind\ncb_invoke.hpp">
+      <Filter>ヘッダー ファイル\ncbind</Filter>
+    </ClInclude>
     <ClInclude Include="..\tp_stub.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>ヘッダー ファイル\ncbind</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
