レイヤ抜き出し処理暫定（一応できたはずだがエラーになる）
git-svn-id: https://sv.kikyou.info/svn/kirikiri2/trunk@5324 9e463c26-7fdd-0310-8662-bb9cb7c2284e

--- a/kirikiri2/src/plugins/win32/psdfile/psdfile_vs2012.vcxproj.filters
+++ b/kirikiri2/src/plugins/win32/psdfile/psdfile_vs2012.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="..\ncbind\ncbind.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="psdfileex.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
