--- a/kirikiri2/src/plugins/win32/psdfile/psdfile_vs2012.vcxproj
+++ b/kirikiri2/src/plugins/win32/psdfile/psdfile_vs2012.vcxproj
@@ -63,7 +63,6 @@
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <ForcedIncludeFiles>stdafx.h</ForcedIncludeFiles>
     </ClCompile>
     <Link>
@@ -100,6 +99,7 @@
     <ClCompile Include="..\ncbind\ncbind.cpp" />
     <ClCompile Include="..\tp_stub.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="psdfileex.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
