--- a/kirikiri2/src/plugins/win32/psdfile/psdfile_vs2012.vcxproj.filters
+++ b/kirikiri2/src/plugins/win32/psdfile/psdfile_vs2012.vcxproj.filters
@@ -27,7 +27,10 @@
     <ClCompile Include="..\ncbind\ncbind.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="psdfileex.cpp">
+    <ClCompile Include="psdclass.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="psdclass_loadmem.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -45,6 +48,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="..\ncbind\ncb_invoke.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="psdclass.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
