読み込みバッファリング
git-svn-id: https://sv.kikyou.info/svn/kirikiri2/trunk@5338 9e463c26-7fdd-0310-8662-bb9cb7c2284e

--- a/kirikiri2/src/plugins/win32/psdfile/psdfile_vs2012.vcxproj
+++ b/kirikiri2/src/plugins/win32/psdfile/psdfile_vs2012.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="psdclass.cpp" />
     <ClCompile Include="psdclass_loadmem.cpp" />
+    <ClCompile Include="psdclass_loadstreambase.cpp" />
     <ClCompile Include="psdclass_loadstream.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
