--- a/kirikiri2/src/plugins/win32/psdfile/psdfile_vs2012.vcxproj.filters
+++ b/kirikiri2/src/plugins/win32/psdfile/psdfile_vs2012.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="psdclass_loadstream.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="psdclass_loadstreambase.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
