minizip 改訂。ファイル読み込みが正常にうごいてなかった
git-svn-id: https://sv.kikyou.info/svn/kirikiri2/trunk@5363 9e463c26-7fdd-0310-8662-bb9cb7c2284e

--- a/kirikiri2/src/plugins/win32/zlib/zlib.vcproj
+++ b/kirikiri2/src/plugins/win32/zlib/zlib.vcproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="shift_jis"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8.00"
+	Version="9.00"
 	Name="zlib"
 	ProjectGUID="{4D60AC68-DE6A-4E37-A0CD-A52D1ECD6646}"
 	RootNamespace="zlib"
 	Keyword="Win32Proj"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
